# madrasvaasi

./: .gitignore  README.md  pyproject.toml
Backend/: .env.example  db.sqlite3
Backend/Backend/: settings.py
Backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/api/management/commands/: seed_helpline.py  seed_tourism.py
Backend/api/migrations/: 0002_area_tourismcategory_attraction.py  0003_helplinecategory_helpline.py
Frontend/pjt_site/: package-lock.json  package.json
Frontend/pjt_site/src/: App.jsx  AuthContext.jsx
Frontend/pjt_site/src/components/: Events.jsx  Forum.jsx  Helpline.jsx  Homepage.jsx  Navbar.jsx  Tourism.jsx  login.jsx  signup.jsx  style.css
